# Schedulrx

./: .gitignore  Dockerfile  README.md  docker-compose.yml
api-go/: go.mod  go.sum
api-go/cmd/server/: main.go
api-go/internal/handlers/: async.go  compare.go  recommend.go  simulate.go
api-go/internal/models/: schema.go
api-go/internal/queue/: redis.go
api-go/internal/telemetry/: metrics.go
api-go/internal/worker/: engine.go  pool.go
deployments/: prometheus.yml
docs/: schema_v1.json
engine-cpp/: CMakeLists.txt
engine-cpp/include/: models.hpp  scheduler_factory.hpp
engine-cpp/include/algorithms/: adaptive.hpp  edf.hpp  fcfs.hpp  mlfq.hpp  rr.hpp  sjf.hpp
engine-cpp/include/multicore/: smp_orchestrator.hpp
engine-cpp/src/: main.cpp
